# MLX-Engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
assets/models/: triangle.gltf
build_m1check/: CMakeCache.txt.tmp771de
build_repair/: CMakeCache.txt
build_repair_vs/: ALL_BUILD.vcxproj  CMakeCache.txt  DX11Study.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dx11_m0.vcxproj  dx11_m0.vcxproj.filters
docs/: ENGINE_ECS_OVERVIEW.md
include/assets/: AssetCatalog.h  AssetManager.h  AssetRegistry.h  AssetTypes.h  GltfLoader.h  MaterialLibrary.h  SceneRepository.h
include/camera/: CameraComponent.h  CameraSystem.h
include/core/: CameraController.h  InputController.h  Logger.h  Window.h
include/ecs/: ComponentSystem.h  Entity.h  EntityManager.h
include/editor/: AssetPickerWindow.h  CameraGizmo.h  EditorUI.h  GizmoSystem.h  HierarchyPanel.h  ImGuiSupport.h  InspectorPanel.h  MaterialEditorWindow.h  ModelImport.h  ProjectBrowserWindow.h  SceneCamera.h  SceneHubWindow.h  SceneView.h
include/geometry/: MeshTypes.h  TowelMeshGenerator.h
include/input/: InputSystem.h
include/math/: camera.h  mat4.h  transform.h  vec2.h  vec3.h  vec4.h
include/physics/: ClothSimulation.h
include/renderer/: Dx11Context.h  Dx11Renderer.h  Dx11ShaderProgram.h  Mesh.h  ShaderLibrary.h
include/scene/: Scene.h  SceneRenderer.h
shaders/: model_complex_ps.hlsl  model_complex_vs.hlsl  triangle_ps.hlsl  triangle_vs.hlsl
src/: main.cpp
src/assets/: AssetCatalog.cpp  AssetManager.cpp  AssetRegistry.cpp  GltfLoader.cpp  MaterialLibrary.cpp  SceneRepository.cpp
src/camera/: CameraSystem.cpp
src/core/: CameraController.cpp  InputController.cpp  Logger.cpp  Window.cpp
src/ecs/: EntityManager.cpp
src/editor/: AssetPickerWindow.cpp  CameraGizmo.cpp  EditorUI.cpp  GizmoSystem.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  MaterialEditorWindow.cpp  ModelImport.cpp  ProjectBrowserWindow.cpp  SceneCamera.cpp  SceneHubWindow.cpp  SceneView.cpp
src/input/: InputSystem.cpp
(+37 files in other folders)
